--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./index.js ",
+    "build": "tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,10 @@
   },
   "homepage": "https://github.com/janewuwz/rxjslib#readme",
   "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
     "babel": "^6.23.0",
+    "chai": "^4.1.2",
     "mocha": "^5.1.1",
     "ts-node": "^6.0.2",
     "typescript": "^2.8.3"
