--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./index.js ",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "dev": "tsc -p . && node test.js"
   },
   "repository": {
     "type": "git",
