--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha ./index.js ",
     "build": "tsc -p .",
-    "dev": "tsc -p . && node test.js"
+    "dev": "tsc -p . --outDir test && node test/test.js"
   },
   "repository": {
     "type": "git",
