--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./index.js ",
-    "build": "tsc -p ."
+    "test": "tsc -p . --outDir test && mocha test/test.js",
+    "dev": "tsc -p . --outDir test && node test/dev.js"
   },
   "repository": {
     "type": "git",
