--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc -p . --outDir dist && mocha dist/test.js",
-    "dev": "tsc -p . --outDir dist && node dist/dev.js",
+    "observable": "tsc -p . --outDir dist && mocha dist/src/__test__/observable.js",
+    "interval": "tsc -p . --outDir dist && mocha dist/src/__test__/interval.js",
+    "combineLatest": "tsc -p . --outDir dist && mocha dist/src/__test__/combineLatest.js",
+    "merge": "tsc -p . --outDir dist && mocha dist/src/__test__/merge.js",
+    "subject": "tsc -p . --outDir dist && mocha dist/src/__test__/subject.js",
+    "switchMap": "tsc -p . --outDir dist && mocha dist/src/__test__/switchMap.js",
+    "build": "tsc -p . --outDir dist",
     "dom": "tsc ./fromEvent.ts -m umd --outDir dist"
   },
   "repository": {
