--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "merge": "tsc -p . --outDir dist && mocha dist/src/__test__/merge-test.js",
     "subject": "tsc -p . --outDir dist && mocha dist/src/__test__/subject-test.js",
     "switchMap": "tsc -p . --outDir dist && mocha dist/src/__test__/switchMap-test.js",
+    "filter": "tsc -p . --outDir dist && mocha dist/src/__test__/filter-test.js",
     "build": "tsc -p . --outDir dist",
     "dom": "tsc ./fromEvent-test.ts -m umd --outDir dist"
   },
