--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concat": "tsc -p . --outDir dist && mocha dist/src/__test__/concat-test.js",
     "zip": "tsc -p . --outDir dist && mocha dist/src/__test__/zip-test.js",
     "mergeMap": "tsc -p . --outDir dist && mocha dist/src/__test__/mergeMap-test.js",
+    "scan": "tsc -p . --outDir dist && mocha dist/src/__test__/scan-test.js",
     "build": "tsc -p . --outDir dist",
     "dev": "tsc -p . --outDir dist && node dist/dev.js"
   },
