--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "scan": "tsc -p . --outDir dist && mocha dist/src/__test__/scan-test.js",
     "multicast": "tsc -p . --outDir dist && mocha dist/src/__test__/multicast-test.js",
     "build": "tsc -p . --outDir dist",
+    "test": "tsc -p . --outDir dist && mocha dist/src/__test__/",
     "dev": "tsc -p . --outDir dist && node dist/dev.js"
   },
   "repository": {
